--- a/src/app/AltaDueño.form
+++ b/src/app/AltaDueño.form
@@ -48,7 +48,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                   <Component id="txtLocalidad" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txtTel" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtTelefono" alignment="0" max="32767" attributes="0"/>
                                   <Component id="txtDireccion" alignment="0" max="32767" attributes="0"/>
                                   <Component id="txtFacebook" alignment="0" max="32767" attributes="0"/>
                                   <Component id="txtApellido" min="-2" pref="99" max="-2" attributes="0"/>
@@ -102,7 +102,7 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtTel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtTelefono" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="31" max="32767" attributes="0"/>
@@ -125,6 +125,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Dar Alta"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAltaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
@@ -169,7 +172,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtDireccion">
     </Component>
-    <Component class="javax.swing.JTextField" name="txtTel">
+    <Component class="javax.swing.JTextField" name="txtTelefono">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
